--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -77,3 +77,23 @@
     background: conic-gradient(var(--o-color) 100%, var(--background-color) 0);
   }
 }
+
+@keyframes highlight-cell {
+  0% {
+    background-color: var(--background-color);
+  }
+
+  100% {
+    background-color: var(--highlight-cell-color);
+  }
+}
+
+@keyframes winner-label-anim {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(10px);
+  }
+}
