--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -30,13 +30,14 @@
 html {
   font-size: 65.2%;
 }
+body {
+  background-color: var(--background-color);
+}
 
 main {
   width: 100vw;
   height: 100vh;
-  background-color: var(--background-color);
   display: grid;
-
   justify-items: center;
   align-content: center;
 }
